@@ -1400,7 +1400,6 @@ static GtkWidget *_lxpanel_generic_config_dlg(const char *title, Panel *p,
 
     while( name )
     {
-        GtkWidget* label = gtk_label_new( name );
         GtkWidget* entry = NULL;
         gpointer val = va_arg( args, gpointer );
         PluginConfType type = va_arg( args, PluginConfType );
@@ -1417,17 +1416,15 @@ static GtkWidget *_lxpanel_generic_config_dlg(const char *title, Panel *p,
                   G_CALLBACK(on_entry_focus_out_old), val );
                 break;
             case CONF_TYPE_INT:
-            {
                 /* FIXME: the range shouldn't be hardcoded */
                 entry = gtk_spin_button_new_with_range( 0, 1000, 1 );
                 gtk_spin_button_set_value( GTK_SPIN_BUTTON(entry), *(int*)val );
                 g_signal_connect( entry, "value-changed",
                   G_CALLBACK(on_spin_changed), val );
                 break;
-            }
             case CONF_TYPE_BOOL:
                 entry = gtk_check_button_new();
-                gtk_container_add( GTK_CONTAINER(entry), label );
+                gtk_container_add(GTK_CONTAINER(entry), gtk_label_new(name));
                 gtk_toggle_button_set_active( GTK_TOGGLE_BUTTON(entry), *(gboolean*)val );
                 g_signal_connect( entry, "toggled",
                   G_CALLBACK(on_toggle_changed), val );
@@ -1455,7 +1452,7 @@ static GtkWidget *_lxpanel_generic_config_dlg(const char *title, Panel *p,
             else
             {
                 GtkWidget* hbox = gtk_hbox_new( FALSE, 2 );
-                gtk_box_pack_start( GTK_BOX(hbox), label, FALSE, FALSE, 2 );
+                gtk_box_pack_start( GTK_BOX(hbox), gtk_label_new(name), FALSE, FALSE, 2 );
                 gtk_box_pack_start( GTK_BOX(hbox), entry, TRUE, TRUE, 2 );
                 gtk_box_pack_start( dlg_vbox, hbox, FALSE, FALSE, 2 );
                 if ((type == CONF_TYPE_FILE_ENTRY) || (type == CONF_TYPE_DIRECTORY_ENTRY))
